# ina-dc-ows

./: .dockerignore  Dockerfile  compose.yml  pyproject.toml
.github/workflows/: build-image.yml
