[project]
name = "ina-dc-ows"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "datacube-ows==1.9.5",
    "gunicorn",
    "gevent",
    "psycopg2",
    "datacube",
    "Pillow",
    "rasterio",
    "netCDF4",
    "gdal==3.12.0.post1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
